tests/src/frontend/typechecking/invalid/unimplementable_conditional_method_2.sk
base class BNo<T> {
  fun abs[T: Show](): void;
}
class C<T>() extends BNo<(T, T)>
